profilelist1exp/unpackaged/objects/Service_Information__c.object
<CustomObject>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <description>capture the record modifiers email address</description>
        <label>Action Performed By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advanced_Performing_Deploy__c</fullName>
        <label>Advanced Performing Deploy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below Base</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advanced_Performing_Support__c</fullName>
        <label>Advanced Performing Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below Base</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cisco__c</fullName>
        <label>Cisco Specializations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Collaboration Architecture Specialization</fullName>
                </value>
                <value>
                    <fullName>Advanced Data Center Architecture Specialization</fullName>
                </value>
                <value>
                    <fullName>Advanced Enterprise Networks Architecture Specialization</fullName>
                </value>
                <value>
                    <fullName>Collaboration Specialization</fullName>
                </value>
                <value>
                    <fullName>Express Networking Specialization</fullName>
                </value>
                <value>
                    <fullName>Internet of Things Specialization Master Specialization</fullName>
                </value>
                <value>
                    <fullName>Security Specialization</fullName>
                </value>
                <value>
                    <fullName>Unified Computing Technology Specialization</fullName>
                </value>
                <value>
                    <fullName>Unified Fabric Technology Specialization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Co-Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMC_Account_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EMC Account ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EMC ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMC_Integration_Status__c</fullName>
        <label>EMC Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
                <value>
                    <fullName>Do Not Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_Last_Sync_date__c</fullName>
        <label>EMC Last Sync date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMC_Operation__c</fullName>
        <label>EMC Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creation</fullName>
                    <default>true</default>
                    <label>Creation</label>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Updation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_message__c</fullName>
        <label>Exception message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Federation_Program_Tier__c</fullName>
        <label>Key Vendor Program Tier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Advanced</fullName>
                </value>
                <value>
                    <fullName>Cisco Registered</fullName>
                </value>
                <value>
                    <fullName>Data Dobi Certified Delivery Partner</fullName>
                </value>
                <value>
                    <fullName>Data Dobi Certified Sales Partner</fullName>
                </value>
                <value>
                    <fullName>Pivotal:MOU</fullName>
                </value>
                <value>
                    <fullName>Pivotal Advanced</fullName>
                </value>
                <value>
                    <fullName>Pivotal Registered</fullName>
                </value>
                <value>
                    <fullName>RSA Platinum</fullName>
                </value>
                <value>
                    <fullName>VCE Gold</fullName>
                </value>
                <value>
                    <fullName>VMWare: Premier</fullName>
                </value>
                <value>
                    <fullName>VMWare Enterprise</fullName>
                    <label>VmWare Enterprise</label>
                </value>
                <value>
                    <fullName>VMWare Platinum</fullName>
                </value>
                <value>
                    <fullName>VMware Premier</fullName>
                    <isActive>false</isActive>
                    <label>VMware Premier</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inside_DELL_EMC_Logistics_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A new field to identify whether partner is Inside or outside dell emc logistics radius.</description>
        <label>Inside DELL EMC Logistics Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_DELL_EMC_Service_Radius__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A new field to identify whether partner is Inside or outside dell emc services radius.</description>
        <label>Inside DELL EMC Service Radius</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Vendor_Relationships__c</fullName>
        <label>Key Vendor Relationships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Data Dobi</fullName>
                </value>
                <value>
                    <fullName>Vmware</fullName>
                    <label>VMware</label>
                </value>
                <value>
                    <fullName>Pivotal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Site_ID__c</fullName>
        <label>Master Site ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Subcontracting_Tier__c</fullName>
        <label>PS Subcontracting Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS Tier 1</fullName>
                </value>
                <value>
                    <fullName>PS Tier 2</fullName>
                </value>
                <value>
                    <fullName>PS Tier 3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Information</relationshipLabel>
        <relationshipName>Service_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Partner_Track__r.Id , Partner_Track__r.Partner_Track_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Service Information</relationshipLabel>
        <relationshipName>Service_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Overview__c</fullName>
        <label>Partnership Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal__c</fullName>
        <label>Pivotal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <description>This is the Partner site ID that has no equipment assigned to it</description>
        <label>Provider ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>Site Name</description>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Deployment_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Deployment Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Onsite_Support_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Onsite Support Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Performance_Deploy__c</fullName>
        <label>Services Performance Deploy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below Base</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Performance_Support__c</fullName>
        <label>Services Performance Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below Base</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Remote_Support_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Remote Support Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Networking__c</fullName>
        <label>Third Party Networking</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Virtualization__c</fullName>
        <label>Third Party Virtualization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VMWare</fullName>
                    <label>VMware</label>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Velocity_Services_Implement__c</fullName>
        <label>Services Deployment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Transitioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Velocity_Services_Managed__c</fullName>
        <label>Services Remote Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Transitioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Velocity_Services__c</fullName>
        <label>Services Onsite Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Transitioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vmware__c</fullName>
        <label>Vmware Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Continuity</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud</fullName>
                </value>
                <value>
                    <fullName>Management &amp; Automation</fullName>
                </value>
                <value>
                    <fullName>Management &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>Networking Virtualization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Server Virtualization</fullName>
                </value>
                <value>
                    <fullName>Software Defined Storage</fullName>
                </value>
                <value>
                    <fullName>Virtualization of Business Critical Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Information</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Services Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enable_Services</fullName>
        <active>false</active>
        <description>Onlu Solution Provider Partner Accounts can have Services Enabled.</description>
        <errorConditionFormula>IF(true,true,false)</errorConditionFormula>
        <errorMessage>Only Solution Provider Accounts can have Services</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Partner_Account</fullName>
        <active>false</active>
        <errorConditionFormula>AND( !(ISNEW()), 
ISCHANGED(Partner_Account__c)
)</errorConditionFormula>
        <errorMessage>Cannot change the Partner Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Partner_Track</fullName>
        <active>true</active>
        <description>Can&apos;t change Partner Track field once created</description>
        <errorConditionFormula>AND( !(ISNEW()),ISCHANGED(Partner_Track__c))</errorConditionFormula>
        <errorMessage>Cannot change the Partner Track</errorMessage>
    </validationRules>
</CustomObject>